--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,63 @@
 ---
 # tasks file for vector-role
+- name: vector
+  hosts: vector
+  tasks:
+    - name: vector | install archive manager
+      become: true
+      ansible.builtin.yum:
+        name:
+          - tar
+    - name: vector | get distrib
+      ansible.builtin.get_url:
+        url: "https://packages.timber.io/vector/{{ vector_version }}/vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        dest: "./vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        mode: "755"
+    - name: vector | unpack distrib
+      ansible.builtin.unarchive:
+        src: "./vector-{{ vector_version }}-x86_64-unknown-linux-musl.tar.gz"
+        dest: "./"
+        remote_src: true
+    - name: vector | install
+      become: true
+      ansible.builtin.copy:
+        src: "vector-x86_64-unknown-linux-musl/bin/vector"
+        dest: "/usr/local/bin/"
+        remote_src: true
+        mode: "755"
+    - name: vector | check installed version
+      ansible.builtin.command:
+        cmd: vector --version
+      register: result
+      changed_when:
+        - 'vector_version not in result.stdout'
+      tags:
+        - vector_check_version
+    - name: vector | create data dir
+      become: true
+      ansible.builtin.file:
+        mode: "755"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_gid }}"
+        path: "{{ vector_config_dir }}"
+        state: "directory"
+    - name: vector | template config
+      ansible.builtin.template:
+        src: "templates/vector.config.j2"
+        dest: "{{ vector_config_dir }}/vector.yaml"
+        mode: "755"
+    - name: vector | register as service
+      become: true
+      ansible.builtin.template:
+        src: "templates/vector.service.j2"
+        dest: "/etc/systemd/system/vector.service"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_gid }}"
+        mode: "0644"
+        backup: true
+    - name: vector | start service
+      become: true
+      ansible.builtin.service:
+        name: vector
+        state: started
+        daemon_reload: true
