--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,6 @@
 ---
-# vars file for vector-role
+vector_version: 0.28.0
+vector_config_dir: /var/lib/vector
+vector_config:
+  data_dir: /var/lib/vector
+  # todo добавить конфигурацию https://vector.dev/docs/reference/configuration/
